--- a/ReactPortfolio/src/components/styles/NavTabs.css
+++ b/ReactPortfolio/src/components/styles/NavTabs.css
@@ -34,3 +34,18 @@
     filter: brightness(0.6);
     transition: all 0.3s ease-in-out;
 }
+
+@media screen and (max-width: 515px) {
+    .navBody{
+        height: 200px;    
+    }
+
+    
+}
+
+@media screen and (max-width: 469px) {
+    .subTitle {
+        font-size: 20px;
+    }
+    
+}
