--- a/ReactPortfolio/src/pages/styles/Resume.css
+++ b/ReactPortfolio/src/pages/styles/Resume.css
@@ -100,16 +100,16 @@ h3{
     padding-bottom: 200px;
 }
 
-.btn{
+.specbtn{
     width: 200px;
     height: 50px;
     border: 2px solid black;
-    background-color: #70798C;
+    background-color: #e8ebf0;
 }
 
-.btn:hover{
-    background-color: #252323;
-    color: white;
+.specbtn:hover{
+    background-color: #818181;
+    color: rgb(255, 255, 255);
 }
 
 .acc {
