--- a/ReactPortfolio/src/components/styles/Footer.css
+++ b/ReactPortfolio/src/components/styles/Footer.css
@@ -22,3 +22,9 @@
     filter: brightness(0.6);
     transition: all 0.3s ease-in-out;
 }
+
+footer{
+    position: fixed;
+    bottom:0;
+    width: 100vw;
+}
