--- a/ReactPortfolio/src/pages/styles/Resume.css
+++ b/ReactPortfolio/src/pages/styles/Resume.css
@@ -129,7 +129,7 @@ h3{
 }
 
 .dvhs {
-    background-image: url("../../assets/images/dvhs.png");
+    background-image: url("../../assets/images/DVHS.png");
     background-position: center;
     background-size: cover;
     color: white;
